Fix of chat window z-index
Also centered vertically app-name

--- a/web_responsive/static/src/less/main.less
+++ b/web_responsive/static/src/less/main.less
@@ -63,3 +63,7 @@ main {
         z-index: initial;
     }
 }
+
+.o_chat_window {
+    z-index: 1000;
+}
