--- a/web_responsive/static/src/less/navbar.less
+++ b/web_responsive/static/src/less/navbar.less
@@ -126,7 +126,7 @@ header {
                             font-size: 20px;
                         }
                         @media (min-width: @screen-sm-min) {
-                            padding: 7px 12px;
+                            padding: 8.5px 12px;
                         }
                     }
                     > a {
